fixing overflow

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -282,7 +282,6 @@
 }
 
 .items-holder {
-  width: 100%;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
   gap: 20px;
